--- a/ag-login.html
+++ b/ag-login.html
@@ -32,11 +32,11 @@
                 <div class="forms-main">
                     <form>
                         <label for="input-cpf">CPF/CNPJ:</label>
-                        <input type="text" id="input-cpf" placeholder="CLIQUE AQUI PARA DIGITAR SEU CPF">
+                        <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF">
                     </form>
                     <form>
                         <label for="input-senha">Senha:</label>
-                        <input type="password" id="input-senha" placeholder="CLIQUE AQUI PARA DIGITAR SUA SENHA">
+                        <input type="password" id="input-senha" placeholder="Digite aqui sua senha">
                     </form>
                 </div>
                 <div class="forms-footer row">
