--- a/ag-senha.html
+++ b/ag-senha.html
@@ -20,8 +20,7 @@
                 <h2 class="forms-title">Esqueceu a senha?</h2>
                 <div class="forms-main">
                     <p>Digite o seu e-mail no campo abaixo e lhe enviaremos uma nova senha.</p>
-                    <form>
-                        <!-- <label for="input-cpf">Seu número:</label> -->
+                    <form action="">
                         <input type="text" id="input-cpf" placeholder="E-mail">
                     </form>
                 </div>
