--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <img src="images/logo/Union.png" alt="agape-logo" class="ag-logo">
+    <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
     <a href="ag-contribuinte.html">
         <span class="btn">
             Entrar
