--- a/ag-dam.html
+++ b/ag-dam.html
@@ -16,13 +16,13 @@
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
-                <button class="a11y-button">
+                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Diminuir fonte" data-bs-placement="bottom">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Contraste" data-bs-placement="bottom">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Aumentar fonte" data-bs-placement="bottom">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
@@ -33,6 +33,7 @@
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
+
             <div class="column align-items-center gap-2">
                 <div class="user-text">
                     <p class="text-end">Olá, 
@@ -40,8 +41,30 @@
                     </p>
                     <p class="text-end msg">lorem ipsum</p>
                 </div>
-                <i class="bi bi-person-fill"></i>
+                <button class="user-btn" 
+                 data-bs-toggle="popover"
+                 data-bs-trigger="hover focus"
+                 data-bs-placement="bottom"
+                 data-bs-custom-class="user-popover"
+                 data-bs-content="
+                 <ul class='popover-list'>
+                    <li>Solicitar acesso</li>
+                    <li>Redefinir senha</li>
+                    <li>
+                        <a href='ag-login.html' class='popover-list--a'>Sair</a>
+                    </li>
+                 </ul>"
+                 data-bs-html="true">
+                    <i class="bi bi-person-fill"></i>
+                </button>
             </div>
+            <!-- <ul class="popover-list">
+                <li>Solicitar acesso</li>
+                <li>Redefinir senha</li>
+                <li>
+                    <a href="ag-login.html" style="text-decoration: none; color: #fff;">Sair</a>
+                </li>
+            </ul> -->
         </div>
         <div class="column flex-wrap align-items-start gap-2">
             <h6 class="grid-title">2ª Via do Documento de Arrecadação Municipal</h6>
@@ -102,6 +125,14 @@
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
     <script src="js/dam.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+    </script>
 </body>
 </html>
