--- a/ag-dam.html
+++ b/ag-dam.html
@@ -43,7 +43,7 @@
                 </div>
                 <button class="user-btn" 
                  data-bs-toggle="popover"
-                 data-bs-trigger="hover focus"
+                 data-bs-trigger="focus"
                  data-bs-placement="bottom"
                  data-bs-custom-class="user-popover"
                  data-bs-content="
