--- a/ag-dam.html
+++ b/ag-dam.html
@@ -129,12 +129,12 @@
             <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
         </div>
          
-        <!-- <div class="d-flex justify-content-end pt-2">
+        <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2">
                 <i class="bi bi-cash"></i>
                 <p>Pagar</p>
             </button>
-        </div> -->
+        </div>
     </main>
     <aside class="sidebar p-3">
         <div class="d-flex justify-content-between align-items-center py-3">
