--- a/ag-dam.html
+++ b/ag-dam.html
@@ -128,7 +128,7 @@
             <p>Total de <span class="border px-1">50</span> registros</p>
             <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
         </div>
-        <div class="d-flex justify-content-center pt-2">
+        <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2">
                 <i class="bi bi-cash"></i>
                 <p>Pagar</p>
