--- a/ag-login.html
+++ b/ag-login.html
@@ -13,7 +13,7 @@
             <div>
                 <img src="images/logo/Union.png" alt="agape" class="ag-logo">
             </div>
-            <div class="zzz">
+            <div class="welcome-box">
                 <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
                 <a href="ag-contribuinte.html">
                     <span class="return-btn">
