--- a/ag-login.html
+++ b/ag-login.html
@@ -50,7 +50,7 @@
                     <a href="ag-dam.html" class="btn">Entrar</a>
                     <a href="ag-certificado.html" class="btn">Login por certificado</a>
                 </div>
-                <hr class="d-none">
+                <!-- <hr class="d-none"> -->
                 <div class="section-footer">
                     <div class="d-none">
                         <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
