--- a/ag-dam.html
+++ b/ag-dam.html
@@ -23,7 +23,7 @@
                  data-bs-placement="bottom">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="a11y-button" 
+                <button id="contraste-btn" class="a11y-button" 
                  data-bs-toggle="tooltip" 
                  data-bs-title="Contraste" 
                  data-bs-trigger="hover" 
@@ -88,50 +88,50 @@
         </div>
         <section class="tributos__section mt-3 mb-1">
             <div>
-                <h5 class="tributos-title bg-light">Tributo</h5>
+                <h5 class="tributos-title">Tributo</h5>
                 <!-- COMO VAI SER A ESCOLHA DO TRIBUTO A SER PAGO? -->
                 <p>IPTU - IPTU GRAND</p> 
                 <p>ALUGUEL 2 - ALUGUEL</p>
                 <p>LIX - COLETA DE LIXO</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Emissão</h5>
+                <h5 class="tributos-title">Emissão</h5>
                 <p>25/09/2023</p>
                 <p>15/09/2023</p>
                 <p>15/09/2023</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Vencimento</h5>
+                <h5 class="tributos-title">Vencimento</h5>
                 <p>25/09/2023</p>
                 <p>15/09/2023</p>
                 <p>15/09/2023</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Subtotal</h5>
+                <h5 class="tributos-title">Subtotal</h5>
                 <p>1.000,00</p>
                 <p>1.000,00</p>
                 <p>200,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Desconto</h5>
+                <h5 class="tributos-title">Desconto</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Juros</h5>
+                <h5 class="tributos-title">Juros</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Multa</h5>
+                <h5 class="tributos-title">Multa</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Situação</h5>
+                <h5 class="tributos-title">Situação</h5>
                 <p>Pendente</p>
                 <p>Pendente</p>
                 <p>Pendente</p>
@@ -224,6 +224,7 @@
         </div>
     </div> 
     <script src="js/dam.js"></script>
+    <script src="js/portal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
