--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -17,7 +17,7 @@
                 <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" id="contraste-btn">
                     <i class="bi bi-circle-half"></i>
                 </button>
                 <button class="a11y-button">
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
+        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-4">
             <div class="search-box">
                 <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
