--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -82,6 +82,7 @@
             </div>
         </div>
     </div> 
+    <script src="app.js"></script>
     <script src="js/portal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
