--- a/ag-dam.html
+++ b/ag-dam.html
@@ -16,25 +16,13 @@
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
-                <button class="a11y-button" 
-                 data-bs-toggle="tooltip" 
-                 data-bs-title="Diminuir fonte"
-                 data-bs-trigger="hover" 
-                 data-bs-placement="bottom">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button id="contraste-btn" class="a11y-button" 
-                 data-bs-toggle="tooltip" 
-                 data-bs-title="Contraste" 
-                 data-bs-trigger="hover" 
-                 data-bs-placement="bottom">
+                <button id="contraste-btn" class="a11y-button">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button" 
-                 data-bs-toggle="tooltip" 
-                 data-bs-title="Aumentar fonte" 
-                 data-bs-trigger="hover" 
-                 data-bs-placement="bottom">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
@@ -223,8 +211,8 @@
             </div>
         </div>
     </div> 
+    <script src="app.js"></script>
     <script src="js/dam.js"></script>
-    <script src="js/portal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
