--- a/ag-login.html
+++ b/ag-login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Portal Ágape Sistemas</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
                 <a href="ag-contribuinte.html">
                     <span class="return-btn">
                         <img src="images/icons8-voltar-30.png" alt="retornar" class="return-img">
-                        <p class="d-none" style="font-size: 1.125rem;">Voltar para o site</p>
+                        <p class="d-none" style="font-size: 1.125rem;">Voltar</p>
                     </span>
                 </a>
             </div>        
@@ -61,6 +62,18 @@
             </div>
         </section>
     </div>
+    <div class="btn-group">
+        <button class="a11y-button">
+            <i class="bi bi-zoom-out"></i>
+        </button>
+        <button class="a11y-button" id="contraste-btn">
+            <i class="bi bi-circle-half"></i>
+        </button>
+        <button class="a11y-button">
+            <i class="bi bi-zoom-in"></i>
+        </button>
+    </div>
     <script src="app.js"></script>
+    <script src="js/mask.js"></script>
 </body>
 </html>
