--- a/ag-senha.html
+++ b/ag-senha.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Recuperar a senha</title>
 </head>
 <body>
@@ -38,6 +39,17 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="btn-group">
+        <button class="a11y-button">
+            <i class="bi bi-zoom-out"></i>
+        </button>
+        <button class="a11y-button" id="contraste-btn">
+            <i class="bi bi-circle-half"></i>
+        </button>
+        <button class="a11y-button">
+            <i class="bi bi-zoom-in"></i>
+        </button>
     </div>
     <script src="app.js"></script>
 </body>
