--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -44,7 +44,7 @@
                         <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
                         <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
                     </div>
-                    <p>© Ágape Sistemas e Tecnologias</p>
+                    <p>Ágape © Copyright 2024</p>
                 </div>
             </div>
         </section>
