--- a/ag-login.html
+++ b/ag-login.html
@@ -48,8 +48,8 @@
                     <a href="ag-senha.html" class="anchor">Esqueceu sua senha?</a>
                 </div>
                 <div class="section-btn row">
-                    <a href="ag-dam.html" class="btn">Entrar</a>
-                    <a href="ag-certificado.html" class="btn">Login por certificado</a>
+                    <a href="ag-dam.html" class="btn">ENTRAR</a>
+                    <a href="ag-certificado.html" class="btn">LOGIN POR CERTIFICADO</a>
                 </div>
                 <!-- <hr class="d-none"> -->
                 <div class="section-footer">
