--- a/ag-dam.html
+++ b/ag-dam.html
@@ -126,8 +126,8 @@
             </div>
         </section>
         <div class="column tributos-footer">
-            <p>Total de <span class="border px-1">50</span> registros</p>
-            <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
+            <p>Total de <span class="tributos-counter">50</span> registros</p>
+            <p>Página <span class="border rounded px-1">1</span> de <span class="tributos-pag">5</span></p>
         </div>
         <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2">
