--- a/ag-dam.html
+++ b/ag-dam.html
@@ -75,54 +75,29 @@
             </select>
         </div>
         <section class="tributos__section mt-3 mb-1">
-            <div>
-                <h5 class="tributos-title">Tributo</h5>
-                <!-- COMO VAI SER A ESCOLHA DO TRIBUTO A SER PAGO? -->
-                <p>IPTU - IPTU GRAND</p> 
-                <p>ALUGUEL 2 - ALUGUEL</p>
-                <p>LIX - COLETA DE LIXO</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Emissão</h5>
-                <p>25/09/2023</p>
-                <p>15/09/2023</p>
-                <p>15/09/2023</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Vencimento</h5>
-                <p>25/09/2023</p>
-                <p>15/09/2023</p>
-                <p>15/09/2023</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Subtotal</h5>
-                <p>1.000,00</p>
-                <p>1.000,00</p>
-                <p>200,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Desconto</h5>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Juros</h5>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Multa</h5>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Situação</h5>
-                <p>Pendente</p>
-                <p>Pendente</p>
-                <p>Pendente</p>
+            <div class="column">
+                <div class="tributos">
+                    <p class="tributos-title">TRIBUTO</p>
+                    <p class="tributos-title">EMISSÃO</p>
+                    <p class="tributos-title">VENCIMENTO</p>
+                    <p class="tributos-title">SUBTOTAL</p>
+                    <p class="tributos-title">DESCONTO</p>
+                    <p class="tributos-title">JUROS</p>
+                    <p class="tributos-title">MULTA</p>
+                    <p class="tributos-title">SITUAÇÃO</p>
+                    <p class="tributos-title">SELECIONAR</p>
+                </div>
+                <div class="tributos-info">
+                    <p>ALUGUEL 2 - ALUGUEL
+                    <p>15/09/2023</p>
+                    <p>30/09/2023</p>
+                    <p>1.000,00</p>
+                    <p>0,00</p>
+                    <p>0,00</p>
+                    <p>0,00</p>
+                    <p>Pendente</p>
+                    <p><input type="checkbox" id="paycheck"></p>
+                </div>
             </div>
         </section>
         <div class="column tributos-footer">
@@ -132,10 +107,11 @@
         <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2">
                 <i class="bi bi-cash"></i>
-                <p>Pagar</p>
+                <p>PAGAR</p>
             </button>
         </div>
     </main>
+    <!-- Filtro -->
     <aside class="sidebar p-3">
         <div class="d-flex justify-content-between align-items-center py-3">
             <h3 class="aside-title m-0">Filtros</h3>
