--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="images/entrar.png"/>
             </span>
         </a>
-        <p>Ágape © Copyright 2024</p>
+        <!-- <p>Ágape © Copyright 2024</p> -->
     </div>
 </body>
 </html>
