--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-md-3">
+        <div class="d-md-flex flex-row-reverse justify-content-between align-items-center py-md-3">
             <div class="search-box">
                 <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
@@ -49,14 +49,15 @@
     <!-- MODAL -->
     <div class="a11y-modal">
         <button class="a11y-button" data-bs-toggle="modal" data-bs-target=".modal">
-            <i class="bi bi-universal-access-circle text-white"></i>
+            <!-- <i class="bi bi-universal-access-circle text-white"></i> -->
+            Clique aqui!
         </button>
     </div>
     <div class="modal fade" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Para que servem esses botões?</h4>
+                    <h4 class="modal-title">Precisa de ajuda? Leia com atenção</h4>
                     <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -77,6 +78,12 @@
                             <i class="bi bi-circle-half"></i>
                         </button>
                         <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-universal-access-circle text-white"></i>
+                        </button>
+                        <span class="ms-1">Selecione o tributo desejado clicando no nome.</span>
                     </div>
                 </div>
             </div>
