--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -49,15 +49,14 @@
     <!-- MODAL -->
     <div class="a11y-modal">
         <button class="a11y-button" data-bs-toggle="modal" data-bs-target=".modal">
-            <!-- <i class="bi bi-universal-access-circle text-white"></i> -->
-            Clique aqui!
+            <i class="bi bi-universal-access-circle text-white"></i>
         </button>
     </div>
     <div class="modal fade" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Precisa de ajuda? Leia com atenção</h4>
+                    <h4 class="modal-title">Para que servem os botões?</h4>
                     <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -79,12 +78,12 @@
                         </button>
                         <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
                     </div>
-                    <div class="pt-2">
+                    <!-- <div class="pt-2">
                         <button class="a11y-button">
                             <i class="bi bi-universal-access-circle text-white"></i>
                         </button>
                         <span class="ms-1">Selecione o tributo desejado clicando no nome.</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
