--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -36,7 +36,7 @@
             </div>
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
-        <section class="grid__section">
+        <section class="grid__section" onclick="loginRef()">
         </section>
     </main>
     <footer class="container column align-items-center pt-3">
