--- a/ag-dam.html
+++ b/ag-dam.html
@@ -69,9 +69,9 @@
             </button>
             <select type="text" id="input-tributos" class="flex-grow-1 p-2">
                 <option disabled="disabled" selected="selected">Selecione um tributo</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
+                <option>IPTU - IPTU GRAND</option>
+                <option>ALUGUEL 2 - ALUGUEL</option>
+                <option>LIX - COLETA DE LIXO</option>
             </select>
         </div>
         <section class="tributos__section mt-3 mb-1">
