--- a/ag-dam.html
+++ b/ag-dam.html
@@ -86,84 +86,84 @@
                 <h5>Situação</h5>
             </div>
             <div class="tributos">
-                <p>IPTU - IPTU GRAND</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>IPTU - IPTU GRAND</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>LIX - COLETA DE LIXO</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>200,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Ativada</p>
+                <span>LIX - COLETA DE LIXO</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>ALUGUEL 2 - ALUGUEL</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>ALUGUEL 2 - ALUGUEL</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>IPTU - IPTU GRAND</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>IPTU - IPTU GRAND</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>LIX - COLETA DE LIXO</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>200,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Ativada</p>
+                <span>LIX - COLETA DE LIXO</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>IPTU - IPTU GRAND</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>IPTU - IPTU GRAND</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>ALUGUEL 2 - ALUGUEL</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>ALUGUEL 2 - ALUGUEL</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
             <div class="tributos">
-                <p>IPTU - IPTU GRAND</p>
-                <p>20/09/2023</p>
-                <p>25/09/2023</p>
-                <p>1.000,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>Pendente</p>
+                <span>IPTU - IPTU GRAND</span>
+                <span>20/09/2023</span>
+                <span>25/09/2023</span>
+                <span>1.000,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>0,00</span>
+                <span>Pendente</span>
             </div>
         </section>
         <div class="column tributos-footer">
