--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="content">
-        <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
+        <img src="images/logo/image 2.png" alt="agape logo" class="ag-logo">
         <a href="ag-contribuinte.html">
             <span class="btn"> Entrar
                 <img src="images/entrar.png"/>
