grid dos tributos responsiva

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -75,99 +75,119 @@
             </select>
         </div>
         <section class="tributos__section mt-3 mb-1">
-            <div class="tributos-title">
-                <h5>Tributos</h5>
-                <h5>Emissão</h5>
-                <h5>Vencimento</h5>
-                <h5>Subtotal</h5>
-                <h5>Desconto</h5>
-                <h5>Juros</h5>
-                <h5>Multa</h5>
-                <h5>Situação</h5>
+            <div class="tributos">
+                <div class="tributos-title">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>SITUAÇÃO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>IPTU - IPTU GRAND</span>
+                    <span>20/09/2023</span>
+                    <span>25/09/2023</span>
+                    <span>1.000,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>Pendente</span>
+                </div>
             </div>
             <div class="tributos">
-                <span>IPTU - IPTU GRAND</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
+                <div class="tributos-title">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>SITUAÇÃO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>LIX - COLETA DE LIXO</span>
+                    <span>20/09/2023</span>
+                    <span>25/09/2023</span>
+                    <span>200,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>Pendente</span>
+                </div>
             </div>
             <div class="tributos">
-                <span>LIX - COLETA DE LIXO</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
+                <div class="tributos-title">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>SITUAÇÃO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>ALUGUEL 2 - ALUGUEL</span>
+                    <span>20/09/2023</span>
+                    <span>25/09/2023</span>
+                    <span>1.000,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>Pendente</span>
+                </div>
             </div>
             <div class="tributos">
-                <span>ALUGUEL 2 - ALUGUEL</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
+                <div class="tributos-title">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>SITUAÇÃO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>IPTU - IPTU GRAND</span>
+                    <span>20/09/2023</span>
+                    <span>25/09/2023</span>
+                    <span>1.000,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>Pendente</span>
+                </div>
             </div>
             <div class="tributos">
-                <span>IPTU - IPTU GRAND</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
-            </div>
-            <div class="tributos">
-                <span>LIX - COLETA DE LIXO</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
-            </div>
-            <div class="tributos">
-                <span>IPTU - IPTU GRAND</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
-            </div>
-            <div class="tributos">
-                <span>ALUGUEL 2 - ALUGUEL</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
-            </div>
-            <div class="tributos">
-                <span>IPTU - IPTU GRAND</span>
-                <span>20/09/2023</span>
-                <span>25/09/2023</span>
-                <span>1.000,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>0,00</span>
-                <span>Pendente</span>
+                <div class="tributos-title">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>SITUAÇÃO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>LIX - COLETA DE LIXO</span>
+                    <span>20/09/2023</span>
+                    <span>25/09/2023</span>
+                    <span>200,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>Pendente</span>
+                </div>
             </div>
         </section>
         <div class="column tributos-footer">
-            <p>Total de <span class="tributos-counter">8</span> registros</p>
+            <p>Total de <span class="tributos-counter">5</span> registros</p>
             <p>Página <span class="border rounded px-1">1</span> de <span class="tributos-pag">5</span></p>
         </div>
         <div class="d-flex justify-content-end pt-2">
