--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Ágape Sistemas</title>
 </head>
 <body>
     <div class="content">
-        <img src="images/logo/image 2.png" alt="agape logo" class="ag-logo">
+        <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
+        <h1>Tenha a gestão publica na sua mão!</h1>
+        <p>Nosso portal foi criado e pensado exclusivamente para a gestão publica de sua necessidade.</p>
         <a href="ag-contribuinte.html">
-            <span class="btn"> Entrar
-                <img src="images/entrar.png"/>
+            <span class="btn"> Começar
+                <i class="bi bi-arrow-up-right"></i>
             </span>
         </a>
     </div>
