--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -34,6 +34,9 @@
                 </form>
                 <i class="bi bi-search"></i>
             </div>
+            <div class="gov-logo--container">
+                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
+            </div>
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
         <section class="grid__section" onclick="loginRef()">
